# sqlite-clone

./: .gitignore  CMakeLists.txt  README.md
DBEngine/: DataBase.cpp  DataBase.h
DBEngine/DBCommands/: ConnectCommand.cpp  ConnectCommand.h  ExitCommand.h
DBEngine/DBCommands/QueryCommands/: QueryInsertIntoCommand.cpp  QuerySelectCommand.cpp
DBEngine/DBDataTypes/: Utils.cpp  schema.cpp
DBEngine/src/: DataBase.cpp  DataBase.h
DBEngine/src/DBCommands/: CommitCommand.cpp  CommitCommand.h
DBEngine/src/DBCommands/QueryCommands/: QueryInsertIntoCommand.h  QuerySelectCommand.h
DBEngine/src/DBDataTypes/: Utils.h  schema.h
DBEngine/src/Parser/: Parser.cpp  Parser.h
DBEngine/tests/MockDs/: Simple_R_W_Op_Small_DB.cpp  Simple_R_W_Op_Small_DB.h
cli/: CliLoop.cpp  CliLoop.h  main.cpp
cli/CliCommand/: ExitCommand.cpp  ExitCommand.h  HelpCommand.cpp  HelpCommand.h  ICommand.cpp  ICommand.h
cli/CliDataTypes/: DataTypes.cpp  DataTypes.hpp
cli/Command/: ExitCommand.cpp  ExitCommand.h  HelpCommand.h
